<resources>
    <string name="app_name">SRHR Sign Language</string>

    <!--<Admob App ID>-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="see_all">See All</string>
    <string name="latest">Latest Videos</string>
    <string name="category">Category</string>
    <string name="all_video">All Video</string>
    <string name="most_view">Most View</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>

    <string name="made_with_in_kenya">Made With ❤ in Kenya</string>
    <string name="app_developer_by_nemosofts">App developer By : Maxmux Solutions</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internet_connection_is_not_available">Internet Connection is not available.</string>
    <string name="retey">RETEY</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="err_server">err server</string>
    <string name="error_maxmux_key">Error Maxmux key</string>
    <string name="create_maxmux_key">Create a new Maxmux key</string>
    <string name="err_internet_not_conn">err internet</string>
    <string name="exit">Exit</string>
    <string name="ok">OK</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="added_to_fav">Added to favourite</string>
    <string name="removed_from_fav">Removed from favourite</string>

    <string name="title_good_night">Good night, </string>
    <string name="title_good_evening">Good evening, </string>
    <string name="title_good_afternoon">Good afternoon, </string>
    <string name="title_good_morning">Good morning, </string>
    <string name="title_good_day">Good day, </string>
    <string name="please_enter_comment">Enter Comment</string>
    <string name="no_comment_found">No Comment Found</string>
    <string name="all_cmt">All Comment</string>
    <string name="comment_require">Comment required..</string>
    <string name="loading">Loading</string>

    <string name="welcomeback">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="registering">Registering..</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="signup">SignUp</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="pass_end_space">Please do not add space at end</string>
    <string name="name">Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_cpassword">Please Enter Confirm Password</string>
    <string name="pass_nomatch">Confirm Password not matched</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Successful</string>
    <string name="image">Image</string>
    <string name="error_password_sort">This password is too short</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="watch_your">Watch Your Favorite Videos</string>
    <string name="dialog_text_no_ads_title">Turn Off ads</string>
    <string name="dialog_text_no_ads_description">Use App more free without ads</string>
    <string name="description_subsribte">With our pack. You can enjoy an ad-free experiance . and focus on the  essential!</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="version">Version</string>
    <string name="share_app">Share App</string>
    <string name="share">Share</string>
    <string name="listening">I am listening</string>
    <string name="share_video">Share Video</string>
    <string name="search_youtube">Search Youtube</string>
</resources>
