<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/latest" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_folder_white_24dp"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_movie"
            android:title="@string/all_video" />

        <item
            android:id="@+id/nav_most"
            android:icon="@drawable/ic_trending_up_white_24dp"
            android:title="@string/most_view" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/favourite" />

        <item
            android:id="@+id/action_set"
            android:icon="@drawable/ic_cog"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />
    </group>


</menu>