<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent_Light"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/welcomeback"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv"
                    android:layout_marginTop="5dp"
                    android:text="@string/signin_to_continue"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_register_hero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>



            <!--Email-->
            <RelativeLayout
                android:paddingTop="2dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/cardmy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/ic_email_black_24dp"
                        app:tint="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/black"
                        app:backgroundTint="@color/black">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="Email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


            </RelativeLayout>

            <!--Password-->
            <RelativeLayout
                android:paddingTop="2dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/cardmy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/ic_lock_black_24dp"
                        app:tint="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/black"
                        app:backgroundTint="@color/black">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>



            </RelativeLayout>

            <LinearLayout
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp">

                <deafop.srhr.video.CheckBok.SmoothCheckBox
                    android:id="@+id/cb_rememberme"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginLeft="7dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_login"
                    android:background="@drawable/cardmy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/button_skip"
                    android:background="@drawable/cardmy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/skip"
                    android:textColor="@color/black"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|top"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8"
                    android:gravity="center"
                    >


                    <View
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_width="0dp"
                        android:layout_height="3dp"
                        android:background="@color/white"
                        android:layout_weight="3"/>

                    <TextView
                        android:id="@+id/tv_login_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="?attr/selectableItemBackground"
                        android:text="New User? Register Now"
                        android:textSize="18dp"
                        android:textColor="@color/white" />

                    <View
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="3dp"
                        android:background="@color/white"
                        android:layout_weight="3"/>

                </LinearLayout>



            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</ScrollView>