<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/BackgroundColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:background="?BackgroundColor"
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        app:titleTextColor="?BackgroundTint"
        app:navigationIcon="?attr/icon_a"
        app:title="@string/settings"
        android:minHeight="?attr/actionBarSize"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:background="#0AFF0267"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_centerVertical="true"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="10dp"
                            android:layout_gravity="center"
                            android:padding="12dp"
                            android:backgroundTint="#26FF0267"
                            android:background="@drawable/abs_top_tracks_playlist"
                            android:src="@drawable/ic_brightness_4_black_24dp"
                            app:tint="#FF0267"/>


                        <TextView
                            android:textAlignment="viewStart"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/dark_mode"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/BackgroundTint" />

                        <com.deafop.library.SwitchButton.SwitchButton
                            android:id="@+id/switch_dark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            app:sb_checked="true"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:background="#0A13EC04"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:foreground="?android:attr/selectableItemBackground"
                        android:id="@+id/nav_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_centerVertical="true"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="10dp"
                            android:layout_gravity="center"
                            android:padding="12dp"
                            android:backgroundTint="#260458EC"
                            android:background="@drawable/abs_top_tracks_playlist"
                            android:src="@drawable/ic_poli"
                            app:tint="#03a9f4"/>


                        <TextView
                            android:textAlignment="viewStart"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/privacy_policy"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/BackgroundTint" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:background="#0AFFBA00"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/nav_about"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_centerVertical="true"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="10dp"
                            android:layout_gravity="center"
                            android:padding="12dp"
                            android:backgroundTint="#26FFBA00"
                            android:background="@drawable/abs_top_tracks_playlist"
                            android:src="@drawable/ic_support"
                            app:tint="#FFBA00"/>


                        <TextView
                            android:textAlignment="viewStart"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/about_us"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/BackgroundTint" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:background="#0A13EC04"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"

                    android:paddingEnd="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_centerVertical="true"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:backgroundTint="#2600DD5A"
                        android:background="@drawable/abs_history_playlist"
                        android:src="@drawable/ic_error"
                        app:tint="#00DD5A"/>


                    <LinearLayout
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/version"
                            android:textSize="17dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/BackgroundTint" />
                        <TextView
                            android:id="@+id/version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="1.0.0"
                            android:textSize="17dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/BackgroundTint" />
                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:background="#0A607D8B"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/nav_share"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_centerVertical="true"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="10dp"
                            android:layout_gravity="center"
                            android:padding="12dp"
                            android:backgroundTint="#26607D8B"
                            android:background="@drawable/abs_top_tracks_playlist"
                            android:src="@drawable/ic_share"
                            app:tint="#607d8b"/>


                        <TextView
                            android:textAlignment="viewStart"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_weight="1"
                            android:text="@string/share_app"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="?attr/BackgroundTint" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginBottom="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/made_with_in_kenya"
                    android:textColor="#607d8b"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>